# abacus

./: .clang-format  .gitignore  CMakeLists.txt  README.org
include/abacus/: abacus.hh  arithmetic.hh  version.hh.in
src/abacus/: abacus.cc
src/bc/: main.cc
